added data export code blocks

--- a/bert/models/model_v2_2/bert_v2_2.ipynb
+++ b/bert/models/model_v2_2/bert_v2_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,8 @@
     "data = df.to_dict(\"records\")\n",
     "# Split the data into train and validation and test sets\n",
     "from sklearn.model_selection import train_test_split \n",
-    "train_dict, test_dict = train_test_split(data, test_size=0.20, random_state=42)\n",
-    "test_dict, validation_dict = train_test_split(test_dict, test_size=0.50, random_state=42)\n",
+    "train_dict, test_dict = train_test_split(data, test_size=0.20, random_state=42) # specifying this random state allows for consistent train, val, and test sets\n",
+    "test_dict, validation_dict = train_test_split(test_dict, test_size=0.50, random_state=42) # same here\n",
     "\n",
     "# Create Dataset objects\n",
     "from datasets import Dataset\n",
@@ -100,6 +100,22 @@
     "})\n",
     "\n",
     "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save annotated data for graphs and gpt testing/training\n",
+    "train_df = pd.DataFrame(train_dict)\n",
+    "test_df = pd.DataFrame(test_dict)\n",
+    "validation_df = pd.DataFrame(validation_dict)\n",
+    "\n",
+    "train_df.to_csv(\"../../../carlos_data/model_data/bert_v2_2_train_data.csv\", index=False)\n",
+    "validation_df.to_csv(\"../../../carlos_data/model_data/bert_v2_2_validation_data.csv\", index=False)\n",
+    "test_df.to_csv(\"../../../carlos_data/model_data/bert_v2_2_test_data.csv\", index=False)"
    ]
   },
   {
@@ -693,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +735,7 @@
    ],
    "source": [
     "# TEST THE MODEL\n",
-    "# IF YOU DONT WANT TO TRAIN LOAD MODEL FROM HUGGINGFACE\n",
+    "# IF YOU DONT WANT TO TRAIN THEN LOAD MODEL FROM HUGGINGFACE\n",
     "\n",
     "\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TextClassificationPipeline\n",
@@ -769,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +803,10 @@
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TextClassificationPipeline\n",
     "import torch\n",
     "\n",
-    "unclean = False\n",
+    "unclean = False # test on filtered descriptions or original, noisy ones\n",
+    "\n",
+    "test_on = \"validation\" # choose what to test on\n",
+    "test_on = \"test\"\n",
     "\n",
     "device = 0 if torch.cuda.is_available() else -1\n",
     "\n",
@@ -795,12 +814,13 @@
     "# tokenizer = AutoTokenizer.from_pretrained(\"raasikhk/carlos_bert_v2_2\")\n",
     "\n",
     "pipe = TextClassificationPipeline(model=model, tokenizer=tokenizer, top_k=None, truncation=True, padding=True, device=device)\n",
+    "\n",
     "if unclean:\n",
     "\tunclean_df = pd.read_excel(\"../../../carlos_data/preprocessed_data_v3.xlsx\")\n",
     "\tunclean_df = unclean_df.drop(['Social', 'Jargon', 'Subjective', 'Gender'], axis=1)\n",
     "\n",
     "\t# Replace with test dataset\n",
-    "\ttest_split = dataset[\"test\"]\n",
+    "\ttest_split = dataset[test_on]\n",
     "\ttest_split = pd.DataFrame(test_split)\n",
     "\ttest_split = test_split.drop(['Social', 'Jargon', 'Subjective', 'Gender'], axis=1)\n",
     "\n",
@@ -813,7 +833,7 @@
     "\t# Get list of unclean descriptions\n",
     "\ttest_descriptions = new_descriptions.tolist()\n",
     "else:\n",
-    "    test_descriptions = dataset[\"test\"][\"Description\"]\n",
+    "    test_descriptions = dataset[test_on][\"Description\"]\n",
     "\n",
     "# make predictions variable of the format\n",
     "# -----------------------\n",
@@ -843,8 +863,8 @@
     "# subj0   gend0   jarg0   soci0\n",
     "# subj0   gend0   jarg0   soci0\n",
     "# subj0   gend0   jarg0   soci0\n",
-    "true_values = np.column_stack((dataset[\"test\"][\"Subjective\"], dataset[\"test\"][\"Gender\"], \n",
-    "                               dataset[\"test\"][\"Jargon\"], dataset[\"test\"][\"Social\"]))\n",
+    "true_values = np.column_stack((dataset[test_on][\"Subjective\"], dataset[test_on][\"Gender\"], \n",
+    "                               dataset[test_on][\"Jargon\"], dataset[test_on][\"Social\"]))\n",
     "\n",
     "# Use Scikit-learn method\n",
     "print(f\"ALL ACCURACY: {accuracy_score(true_values, predictions)}\")\n",
@@ -859,6 +879,65 @@
     "            part_acc_score += 1\n",
     "\n",
     "print(f\"PARTIAL ACCURACY: {part_acc_score/total}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ObjectID                                FilteredDescription  Subjective  \\\n",
+      "0         124  Chipped Stone Tool November 1993 guide term ad...           0   \n",
+      "1         679  Chipped Stone Axe Heads NOTE: UPDATED 08/25/20...           0   \n",
+      "2        1659  Provenance taken from list attached to 8283 ta...           1   \n",
+      "3         632  Weight for Throwing Stick (atlatl) A February ...           0   \n",
+      "4       36371  Julius Caesar from the Twelve Roman Emperors N...           0   \n",
+      "..        ...                                                ...         ...   \n",
+      "176       695  Weight for Throwing Stick NOTE: UPDATED in Jun...           0   \n",
+      "177       833  Estampes, Livres Location verified, inventory ...           0   \n",
+      "178     17766  Oil Lamp Location verified, room 031 inventory...           0   \n",
+      "179      1402  Red-Figure Base Fragment Provenance taken from...           0   \n",
+      "180     32925  Love on Pegasus During the conservation treatm...           0   \n",
+      "\n",
+      "     Gender  Jargon  Social  \n",
+      "0         0       0       0  \n",
+      "1         0       0       0  \n",
+      "2         1       1       0  \n",
+      "3         0       1       0  \n",
+      "4         0       0       0  \n",
+      "..      ...     ...     ...  \n",
+      "176       0       0       0  \n",
+      "177       0       0       0  \n",
+      "178       0       0       0  \n",
+      "179       0       0       0  \n",
+      "180       0       0       0  \n",
+      "\n",
+      "[181 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save predictions for validation or test set (depending on choice above) as csv\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(predictions, columns=[\"Subjective\", \"Gender\", \"Jargon\", \"Social\"])\n",
+    "\n",
+    "# Add the descriptions as the first column (choose unclean in block above)\n",
+    "if unclean:\n",
+    "\tdf.insert(0, \"Description\", test_descriptions)\n",
+    "else:\n",
+    "\tdf.insert(0, \"FilteredDescription\", test_descriptions)\n",
+    "\n",
+    "# add objectID\n",
+    "df.insert(0, \"ObjectID\", dataset[test_on][\"ObjectID\"])\n",
+    "\n",
+    "df.to_csv(f\"../../../carlos_data/predicted_data/bert_v2_2_{test_on}_predictions.csv\", index=False)\n",
+    "\n",
+    "print(df)"
    ]
   }
  ],
