--- a/bert/bert.ipynb
+++ b/bert/bert.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers torch scikit-learn datasets seaborn"
+    "!pip install -r ../requirements.txt"
    ]
   },
   {
@@ -1117,7 +1117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1131,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
