added option to disable wandb

--- a/bert/bert.ipynb
+++ b/bert/bert.ipynb
@@ -384,6 +384,7 @@
     "\t# hub_token = hg_token,\n",
     "\t# hub_model_id = \"raasikhk/carlos_bert_v2_2\",\n",
     "\t# push_to_hub=True,\n",
+    "\treport_to=\"none\"\n",
     ")\n",
     "\n",
     "import os\n",
